# qvp_poc

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  COMPLETION_STATUS.md  DATABASE_INTEGRATION.md  FOURIER_ANALYSIS.md  KDB_IMPLEMENTATION_SUMMARY.md  KDB_INTEGRATION.md  POSTGRES_IMPLEMENTATION_SUMMARY.md  POSTGRES_QUICK_REFERENCE.md
migrations/: env.py
notebooks/: 01_demo_walkthrough.ipynb
qvp/: __init__.py  config.py
qvp/analytics/: __init__.py  performance.py
qvp/backtest/: __init__.py  engine.py
qvp/dashboard/: __init__.py  app.py  callbacks.py  layouts.py  risk_monitor.py
qvp/data/: __init__.py  ingestion.py  kdb_connector.py  postgres_connector.py  vector_store.py
qvp/data/q_scripts/: schema.q  volatility.q
qvp/live/: __init__.py  async_portfolio.py  async_strategy.py  feeds.py  simulator.py
qvp/portfolio/: __init__.py  optimization.py
qvp/research/: __init__.py  features.py  fourier.py  garch.py  volatility.py
qvp/risk/: __init__.py  risk_management.py
qvp/strategies/: __init__.py  volatility_strategies.py
scripts/: create_initial_migration.py  docker-helpers.ps1  docker.sh  example_fourier.py  example_kdb.py  example_postgres.py  example_volatility.py  init_db.sql  init_git.sh  run_all_demos.py  run_demo.py
tests/: conftest.py  test_backtest.py  test_volatility.py
