[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qvp"
version = "0.1.0"
description = "Quantitative Volatility Platform - Systematic Volatility Trading Infrastructure"
authors = [{name = "Sam Abtahi"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.28",
    "arch>=6.2.0", # GARCH models
    "cvxpy>=1.4.0", # Portfolio optimization
    "pyarrow>=13.0.0", # Parquet support
    "tables>=3.8.0", # HDF5 support
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "loguru>=0.7.0",
    "pykx>=2.4.0", # KDB+ integration
    "psycopg2-binary>=2.9.9", # PostgreSQL adapter
    "asyncpg>=0.29.0", # Async PostgreSQL
    "pgvector>=0.2.0", # Vector similarity search
    "alembic>=1.13.0", # Database migrations
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qvp*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=qvp --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
